rev1 working with minor modification. Start taking notes for rev2 fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 adafruit_feather_template-backups/
 adin1110-featherwing-backups/
+~adin1110-featherwing.kicad_pcb.lck
+~adin1110-featherwing.kicad_sch.lck
+
